# 2D-Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game  game.c  thoughts.txt
configs/levels/: level_1.json
src/: colors.hpp  enemies.hpp  game.cpp  game.hpp  game_scene.cpp  game_scene.hpp  level_builder.cpp  level_builder.hpp  main.cpp  main_menu.cpp  main_menu.hpp  mr_professor_wurst.cpp  mr_professor_wurst.hpp  night_borne.cpp  night_borne.hpp  overlay.hpp  player.cpp  player.hpp  scene.cpp  scene.hpp  settings_menu.cpp  settings_menu.hpp  start_menu.cpp  start_menu.hpp  tile.hpp  window.cpp  window.hpp
src/enemies/: enemies.hpp  mr_professor_wurst.cpp  mr_professor_wurst.hpp  night_borne.cpp  night_borne.hpp  orc.cpp  orc.hpp
src/gear/: armor.hpp  weapon.cpp  weapon.hpp
src/gear/weapons/swords/: default_sword.cpp  default_sword.hpp  no_sword.cpp  no_sword.hpp
src/inventory-system/: inventory.cpp  inventory.hpp  item.cpp  item.hpp
src/menus/: console.cpp  console.hpp  inventory_menu.cpp  inventory_menu.hpp  settings_menu.cpp  settings_menu.hpp  start_menu.cpp  start_menu.hpp
src/utils/: utils.cpp  utils.hpp
